[fix] player choices wrap

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h1 {
 }
 
 img {
-   max-width: 150px;
+   max-width: 175px;
 }
 
 section {
@@ -31,6 +31,10 @@ div#battle-container {
 
 div#player-choices {
    margin-top: 2rem;
+   display: flex;
+   justify-content: center;
+   gap: 1rem;
+   flex-wrap: wrap-reverse;
 }
 
 @media (max-width: 480px) {
